Refactor create handlers
